h1 fix color contrast

--- a/style/style.scss
+++ b/style/style.scss
@@ -25,7 +25,7 @@ main {
     gap: 1rem;
 
     h1 {
-        color: $gray;
+        color: #595959;
         font-size: 1em;
         font-weight: 300;
 
